[package]
name = "tts-server"
version = "0.3.0"
authors = ["litcc"]
edition = "2021"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = """TTS Api Server 软件仅供学习交流，严禁用于商业用途，请于24小时内删除！
目前已实现接口有：[微软文本转语音] 后续看情况可能会再加入其他接口。
具体使用方法请看 --help 中参数介绍，以及开源项目中 README.md 文档
"""


[dependencies]
clap = { version = "3.2.17", features = ["derive"] }  # 命令行解析库
itertools = "0.10.3"  # 迭代器工具库
fancy-regex = "0.10.0"  # 正则库
log = "0.4.17"  # 日志库
log4rs = "1.1.1"  # 日志扩展库
thiserror = "1.0.32"
anyhow = "1.0.60"
#env_logger = "0.9.0"  # 日志扩展库
num = "0.4.0"  #计算库
uuid = { version = "1.1.2", features = ["v4"] }  # uuid库
urlencoding = "2.1.0"  # url编码解析库
rand = "0.8.5"  # 随机数库
futures = "0.3.21"  # 异步工具库
reqwest = { version = "0.11.11", features = ["json", "native-tls"] }  # http 请求库
once_cell = "1.13.0"
bytes = "1.2.0"
serde = "1.0.142"
serde_json = "1.0.83"
bincode = "1.3.3"
actix-web = "4.1.0"
#actix-rt = "2.7.0"
local_ipaddress = "0.1.3"  # 获取本地ip
tokio-native-tls = "0.3.0"
## tokio-tungstenite 暂时不能升级，可能是库有问题了，或者是我用法出问题了，暂时没有分析
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tokio = { version = "1.20.1", features = ["full"] } # 协程库
mime_guess = "2.0.4"  # 文件类型检测
event_bus = { path = "/mnt/work/code/Me/Rust/EventBus" }
#event_bus = { git = "https://github.com/litcc/event_bus.git" }
chrono = "0.4.20" # 时间库
async-trait = "0.1.57"
base64 = "0.13.0"
rust-embed = { version = "6.4.0", optional = true }  # 嵌入文件库

[profile.release]
opt-level = 'z'
#lto = true
#codegen-units = 1
panic = 'abort'


[features]
#default = []


# Build this crate in isolation, without using PyOxidizer.
web-entrance = ["rust-embed"]

# Build this crate by executing a `pyoxidizer` executable to build
# required artifacts.

# Build this crate by reusing artifacts generated by `pyoxidizer` out-of-band.
# In this mode, the PYOXIDIZER_ARTIFACT_DIR environment variable can refer
# to the directory containing build artifacts produced by `pyoxidizer`. If not
# set, OUT_DIR will be used.



# This empty workspace table forces Cargo to treat this manifest as its
# own workspace, even if a parent directory defines a workspace. If you want
# this Rust project to exist as part of a larger workspace, simply delete this.
[workspace]